// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCardSelect is rendered 1`] = `
<button
  aria-checked="false"
  aria-label="aria-label"
  class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--xSmall ouiCardSelect ouiCardSelect--text testClass1 testClass2"
  data-test-subj="test subject string"
  role="switch"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`OuiCardSelect props can override color 1`] = `
<button
  aria-checked="false"
  class="ouiButtonEmpty ouiButtonEmpty--danger ouiButtonEmpty--xSmall ouiCardSelect ouiCardSelect--danger"
  role="switch"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`OuiCardSelect props can override text 1`] = `
<button
  aria-checked="false"
  class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--xSmall ouiCardSelect ouiCardSelect--text"
  role="switch"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      Custom text
    </span>
  </span>
</button>
`;

exports[`OuiCardSelect props isDisabled 1`] = `
<button
  aria-checked="false"
  class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--xSmall ouiButtonEmpty-isDisabled ouiCardSelect ouiCardSelect--text"
  disabled=""
  role="switch"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      Unavailable
    </span>
  </span>
</button>
`;

exports[`OuiCardSelect props isSelected 1`] = `
<button
  aria-checked="true"
  class="ouiButtonEmpty ouiButtonEmpty--text ouiButtonEmpty--xSmall ouiCardSelect ouiCardSelect--success"
  role="switch"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonContent__icon"
      color="inherit"
      data-ouiicon-type="check"
    />
    <span
      class="ouiButtonEmpty__text"
    >
      Selected
    </span>
  </span>
</button>
`;
